2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (DISTFILES.generated): New variable.
	(DISTFILES.gettext): Remove plural.c.
	(dist): Use DISTFILES.generated.
	(YACC): Use "bison -y" instead of @YACC@.
	Needed for "make dist" to work in normal packages.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (dist): Don't depend on $(DISTFILES). Instead, generate
	the files to be distributed through a recursive 'make' call.

2001-03-17  Bruno Haible  <haible@clisp.cons.org>

	* gettextP.h (struct expression): Add operators lnot, less_than,
	greater_than, less_or_equal, greater_or_equal. Replace args2/args3
	union by a 'nargs' counter and an 'args[]' array.
	* plural.y: Don't include stdarg.h.
	(new_exp): New function.
	(new_exp_0, new_exp_2, new_exp_3): Rewritten to call new_exp.
	(new_exp_1): New function.
	('?' ':'): Make right-associative.
	(EQUOP2): New token, replaces '=' and '!'.
	(CMPOP2): New token.
	(ADDOP2): New token, replaces '+' and '-'.
	(MULOP2): New token, replaces '*', '/' and '%'.
	('!'): New token.
	(exp): Add rules for CMPOP2 and '!'. Don't call YYABORT.
	(start): Call YYABORT here.
	(FREE_EXPRESSION): Update.
	(yylex): Don't skip "\\n". Recognize comparison and '!' operators.
	Update for new token symbols.
	* loadmsgcat.c (plvar, plone, germanic_plural, init_germanic_plural):
	Update.
	* dcigettext.c (_nl_find_msg): Optimize for space.
	(plural_eval): Recognize comparison and '!' operators. Optimize for
	space.

	* dcigettext.c (transcmp): New declaration.

2001-03-10  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (libintl.la): Pass -liconv and flag -no-undefined.
	Needed on platforms like BeOS.

	* Makefile.in (all-no-yes): Depend on libgnuintl.$la, not libintl.$la.
	(libgnuintl.a, libgnuintl.la): New targets. Needed for linking
	../tests/tstgettext on systems which have gettext() in libintl.so.

	* localcharset.c (locale_charset): Allow wildcard syntax. Resolve
	alias also if codeset is empty.